<resources>
    <string name="app_name">FoodPlaces</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="food_places">Food Places</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="add_restaurant_button">Add Restaurant</string>
    <string name="fill_fields_message">Please fill all the fields</string>
    <string name="stars">Stars:</string>
    <string name="modify">Modify</string>
    <string name="click_to_edit_restaurant">Click to edit Restaurant</string>
    <string name="login_error_message">Please fill username and password</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="add_success">Restaurant added</string>
    <string name="logout">Logout</string>
    <string name="modified_success">Restaurant modified</string>

    <string-array name="array_stars">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
