<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="@dimen/padding_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/add_restaurant_margin_top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:hint="@string/name"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/restaurant_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:hint="@string/location"
                android:imeOptions="actionDone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/stars"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/restaurant_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_stars"
                    android:padding="8dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/edit_restaurant_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/deepSkyBlue"
            android:text="@string/modify"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>